--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html ng-app="helloWorld">
+<html ng-app="agendaContados">
 <head>
-	<title>Hello World com AngularJs</title>
+	<title>Agenda Contatos com AngularJs</title>
 	<script src="angular.js"></script>
 	<script>
 		angular.module("helloWorld",[]);
