--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 		{
 			margin-top: 20px;
 		}
+		.bg
+		{
+			background-color: #F5F5F5;
+		}
 	</style>
 	<script src="lib/angular/angular.js"></script>
 	<script>
@@ -34,6 +38,14 @@
 				{nome: "Liz", telefone: "99992222"},
 				{nome: "Elo", telefone: "99993333"}
 			];
+			$scope.operadoras = [
+				{nome: "Oi", codigo: "31", categoria: "Celular"},
+				{nome: "Vivo", codigo: "15", categoria: "Celular"},
+				{nome: "Tim", codigo: "41", categoria: "Celular"},
+				{nome: "Claro", codigo: "21", categoria: "Celular"},
+				{nome: "GVT", codigo: "25", categoria: "Fixo"},
+				{nome: "Embratel", codigo: "21", categoria: "Fixo"},
+			]
 			$scope.adicionarCotato = function(contato){
 				$scope.contatos.push(angular.copy(contato));
 				delete $scope.contato;
@@ -41,24 +53,28 @@
 		}); 
 	</script>
 </head>
-<body ng-controller="listaTelefonicaCtrl">
+<body class="bg"ng-controller="listaTelefonicaCtrl">
 	<div class="jumbotron">
 		<h3>{{app}}</h3>
 		<table class="table">
 			<tr>
 				<th>Nome</th>
 				<th>Telefone</th>
+				<th>Operadora</th>
 			</tr>
 			<tr ng-repeat="contato in contatos">
 				<td>{{contato.nome}}</td>
 				<td>{{contato.telefone}}</td>
+				<td>{{contato.operadora.nome}}</td>
 			</tr>	
 		</table>
 		<hr/>
 		<input class="form-control" type="text" placeholder="Nome" ng-model="contato.nome"/>
 		<input class="form-control" type="text" placeholder="Telefone" ng-model="contato.telefone"/>
-		<button class="btn btn-primary btn-block"ng-click="adicionarCotato(contato)">Adicionar Contato</button>
-		{{contato}}
+		<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras">
+			<option value="">Selecione uma Operadora</option>
+		</select>
+		<button class="btn btn-primary btn-block" ng-click="adicionarCotato(contato)" ng-disabled="!contato.nome || !contato.telefone">Adicionar Contato</button>
 	</div>
 </body>
 </html>
